--- a/micro-master-in-ai-and-programming/WEF008-game-of-life/index.html
+++ b/micro-master-in-ai-and-programming/WEF008-game-of-life/index.html
@@ -16,12 +16,11 @@
         <header>
             <nav class="navbar fixed-top navbar-expand-lg">
                 <div class="container">
-                    <a class="navbar-brand" href="#">Tien.</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarText">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Home</a>
                             </li>
@@ -29,10 +28,13 @@
                                 <a class="nav-link" href="#">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Experience</a>
+                                <a class="nav-link" href="#">Experiences</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Game of Life</a>
+                                <a class="nav-link" href="#">Skills</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Works</a>
                             </li>
                         </ul>
                     </div>
