--- a/micro-master-in-ai-and-programming/WEF008-game-of-life/index.html
+++ b/micro-master-in-ai-and-programming/WEF008-game-of-life/index.html
@@ -43,6 +43,7 @@
                     </div>
                 </div>
             </nav>
+            <div class="progress"></div>
         </header>
         <main>
             <section></section>
