--- a/micro-master-in-ai-and-programming/WEF008-game-of-life/index.html
+++ b/micro-master-in-ai-and-programming/WEF008-game-of-life/index.html
@@ -46,7 +46,26 @@
             <div class="progress"></div>
         </header>
         <main>
-            <section></section>
+            <section>
+                <h1>Home</h1>
+                <p>This is my Home Page</p>
+            </section>
+            <section>
+                <h1>About</h1>
+                <p>This is my Home Page</p>
+            </section>
+            <section>
+                <h1>Experiences</h1>
+                <p>This is my Home Page</p>
+            </section>
+            <section>
+                <h1>Skills</h1>
+                <p>This is my Home Page</p>
+            </section>
+            <section>
+                <h1>Works</h1>
+                <p>This is my Home Page</p>
+            </section>
         </main>
         <footer>
         </footer>
