--- a/micro-master-in-ai-and-programming/WEF008-game-of-life/index.html
+++ b/micro-master-in-ai-and-programming/WEF008-game-of-life/index.html
@@ -25,47 +25,48 @@
                     <div class="collapse navbar-collapse" id="navbarText">
                         <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Home</a>
+                                <a class="nav-link active" href="#home">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
+                                <a class="nav-link" href="#about">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Experiences</a>
+                                <a class="nav-link" href="#experiences">Experiences</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Skills</a>
+                                <a class="nav-link" href="#skills">Skills</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Works</a>
+                                <a class="nav-link" href="#works">Works</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
-            <div class="progress"></div>
         </header>
         <main>
-            <section>
-                <h1>Home</h1>
-                <p>This is my Home Page</p>
-            </section>
-            <section>
-                <h1>About</h1>
-                <p>This is my Home Page</p>
-            </section>
-            <section>
-                <h1>Experiences</h1>
-                <p>This is my Home Page</p>
-            </section>
-            <section>
-                <h1>Skills</h1>
-                <p>This is my Home Page</p>
-            </section>
-            <section>
-                <h1>Works</h1>
-                <p>This is my Home Page</p>
-            </section>
+            <div class="container">
+                <section id="home" class="home-page">
+                    <h1>Home</h1>
+                    <p>This is my Home Page</p>
+                </section>
+                <section id="about" class="about-page">
+                    <h1>About</h1>
+                    <p>This is my Home Page</p>
+                </section>
+                <section id="experiences" class="experiences-page">
+                    <h1>Experiences</h1>
+                    <p>This is my Home Page</p>
+                </section>
+                <section id="skills" class="skills=page">
+                    <h1>Skills</h1>
+                    <p>This is my Home Page</p>
+                </section>
+                <section id="works" class="works-page">
+                    <h1>Works</h1>
+                    <p>This is my Home Page</p>
+                </section>
+            </div>
         </main>
         <footer>
         </footer>
