--- a/micro-master-in-ai-and-programming/WEF008-game-of-life/index.html
+++ b/micro-master-in-ai-and-programming/WEF008-game-of-life/index.html
@@ -8,6 +8,9 @@
     rel="stylesheet" 
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
     crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" 
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css" />
     <title>Tien - Game of Life Project</title>
 </head>
@@ -47,8 +50,12 @@
         <main>
             <div class="container">
                 <section id="home" class="home-page">
-                    <h1>Home</h1>
-                    <p>This is my Home Page</p>
+                    <h1><i class="fa-solid fa-hand"></i>, Everyone</h1>
+                    <p>The Game of Life: Personal Project.</p>
+                    <a href="works.html" class="btn-openlink">
+                        <i class="fa-solid fa-play"></i>
+                        LET'S PLAY!
+                    </a>
                 </section>
                 <section id="about" class="about-page">
                     <h1>About</h1>
@@ -58,7 +65,7 @@
                     <h1>Experiences</h1>
                     <p>This is my Home Page</p>
                 </section>
-                <section id="skills" class="skills=page">
+                <section id="skills" class="skills-page">
                     <h1>Skills</h1>
                     <p>This is my Home Page</p>
                 </section>
