--- a/micro-master-in-ai-and-programming/WEF008-game-of-life/index.html
+++ b/micro-master-in-ai-and-programming/WEF008-game-of-life/index.html
@@ -15,69 +15,74 @@
     <title>Tien - Game of Life Project</title>
 </head>
 <body>
-    <div id="canvas">
-        <header>
-            <nav class="navbar fixed-top navbar-expand-lg">
-                <div class="container">
-                    <button class="navbar-toggler" type="button" 
-                    data-bs-toggle="collapse" data-bs-target="#navbarText" 
-                    aria-controls="navbarText" aria-expanded="false" 
-                    aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarText">
-                        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#home">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#about">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#experiences">Experiences</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#skills">Skills</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#works">Works</a>
-                            </li>
-                        </ul>
+    <header>
+        <nav class="navbar fixed-top navbar-expand-lg">
+            <div class="container">
+                <button class="navbar-toggler" type="button" 
+                data-bs-toggle="collapse" data-bs-target="#navbarText" 
+                aria-controls="navbarText" aria-expanded="false" 
+                aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#game">Game</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="container">
+            <section id="home" class="home-page">
+                <h1><i class="fa-solid fa-hand"></i>, Everyone</h1>
+                <p>The Game of Life: Personal Project.</p>
+                <a href="game.html" class="btn-openlink">
+                    <i class="fa-solid fa-play"></i>
+                    LET'S PLAY!
+                </a>
+            </section>
+
+            <section id="about" class="about-page">
+                <h1>About Me</h1>
+                <div class="about-container">
+                    <div class="about-img">
+                        <img class="myimg" src="./img//tien.jpg" alt="tienpic">
+                    </div>
+                    <div class="about-card">
+                        <div class="card-content">
+                            <div>
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. industry Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took.</p>
+                            </div>
+                            <div class="content-list">
+                                <ul>
+                                    <li><i class="fa-solid fa-code"></i> <span>Code</span></li>
+                                    <li><i class="fa-solid fa-bed"></i> <span>Sleep</span></li>
+                                    <li><i class="fa-solid fa-cookie-bite"></i> <span>Repeat</span></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <a href="#" class="btn-aboutme">
+                            Download CV
+                        </a>
                     </div>
                 </div>
-            </nav>
-        </header>
-        <main>
-            <div class="container">
-                <section id="home" class="home-page">
-                    <h1><i class="fa-solid fa-hand"></i>, Everyone</h1>
-                    <p>The Game of Life: Personal Project.</p>
-                    <a href="works.html" class="btn-openlink">
-                        <i class="fa-solid fa-play"></i>
-                        LET'S PLAY!
-                    </a>
-                </section>
-                <section id="about" class="about-page">
-                    <h1>About</h1>
-                    <p>This is my Home Page</p>
-                </section>
-                <section id="experiences" class="experiences-page">
-                    <h1>Experiences</h1>
-                    <p>This is my Home Page</p>
-                </section>
-                <section id="skills" class="skills-page">
-                    <h1>Skills</h1>
-                    <p>This is my Home Page</p>
-                </section>
-                <section id="works" class="works-page">
-                    <h1>Works</h1>
-                    <p>This is my Home Page</p>
-                </section>
-            </div>
-        </main>
-        <footer>
-        </footer>
-    </div>
+            </section>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <span>@2023 Tien Hanprab.</span>
+        </div>
+    </footer>
     <script 
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
