--- a/micro-master-in-ai-and-programming/WEF008-game-of-life/game.html
+++ b/micro-master-in-ai-and-programming/WEF008-game-of-life/game.html
@@ -1,42 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, shrink-to-fit=no"/>
-    <link 
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
-    rel="stylesheet" 
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-    crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css" />
-    <title>Game</title>
-</head>
-<body>
-    <div id="canvas">
-        <h1 class="game-name">TEXT NAME</h1>
-        <div class="container">
-            <div class="display">
-                <div>
-    
-                </div>
-            </div>
-            <div class="set-buttom">
-                <!-- Start, Stop, Reset, Random (Multiple colors) -->
-                <!-- Gosper Glider Gun, Glider, Lightweight train -->
-                <!-- Keyboard control -->
-            </div>
-            <div>
-                <!-- Speed of game-->
-            </div>
-    
-        </div>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link rel="stylesheet" href="game.css" />
+  </head>
+  <body>
+    <div class="header">GAME OF LIFE</div>
+    <div id="canvas"></div>
+    <!-- Add a slider to control the framerate -->
+    <div class="framerate-control">
+      <label for="framerate-slider">Framerate:</label>
+      <input
+        type="range"
+        id="framerate-slider"
+        min="1"
+        max="60"
+        value="30"
+      />
+      <span id="framerate-value">30 FPS</span>
     </div>
-    <script 
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous">
-    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
-    <script src="script-game-of-life.js"></script>
-</body>
+    <script src="game.js"></script>
+  </body>
 </html>
