--- a/micro-master-in-ai-and-programming/WEF008-game-of-life/game.html
+++ b/micro-master-in-ai-and-programming/WEF008-game-of-life/game.html
@@ -25,11 +25,12 @@
       <span id="framerate-value">30 FPS</span>
     </div>
 
-    <!-- Add Start and Stop buttons -->
+    <!-- Add Start Stop Reset and randomization buttons -->
     <div class="control-buttons">
       <button id="start-button">Start</button>
       <button id="stop-button">Stop</button>
       <button id="reset-button">Reset</button>
+      <button id="randomize-button">Randomize</button>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
