--- a/micro-master-in-ai-and-programming/WEF008-game-of-life/game.html
+++ b/micro-master-in-ai-and-programming/WEF008-game-of-life/game.html
@@ -33,6 +33,14 @@
       <button id="randomize-button">Randomize</button>
     </div>
 
+    <!-- Add a dropdown for pattern selection -->
+    <select id="pattern-selector">
+      <option value="random">Random</option>
+      <option value="glider">Glider</option>
+      <option value="lwss">Lightweight Spaceship</option>
+    </select>
+    <button id="apply-pattern-button">Apply Pattern</button>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     <script src="game.js"></script>
   </body>
