--- a/micro-master-in-ai-and-programming/WEF008-game-of-life/index.html
+++ b/micro-master-in-ai-and-programming/WEF008-game-of-life/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" 
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="index.css" />
     <title>Tien - Game of Life Project</title>
 </head>
 <body>
@@ -33,7 +33,7 @@
                             <a class="nav-link" href="#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#game">Game</a>
+                            <a class="nav-link" href="game.html">Game</a>
                         </li>
                     </ul>
                 </div>
@@ -60,7 +60,7 @@
                     <div class="about-card">
                         <div class="card-content">
                             <div>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. industry Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took.</p>
+                                <p>My name is Tien Hanprab from Bangkok in Thailand, and I love to travel and try new cultural foods. I also try to practice coding to become a developer.</p>
                             </div>
                             <div class="content-list">
                                 <ul>
