--- a/micro-master-in-ai-and-programming/WEF008-game-of-life/game.html
+++ b/micro-master-in-ai-and-programming/WEF008-game-of-life/game.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="game.css" />
   </head>
   <body>
-    <div class="header">GAME OF LIFE</div>
-    <div id="canvas"></div>
+    <div class="container">
+      <div class="content">
+        <div class="header">GAME OF LIFE</div>
+        <div id="canvas"></div>
 
     <!-- Add a slider to control the framerate -->
     <div class="framerate-control">
@@ -20,7 +22,7 @@
         id="framerate-slider"
         min="1"
         max="60"
-        value="30"
+        value="5"
       />
       <span id="framerate-value">30 FPS</span>
     </div>
@@ -40,7 +42,8 @@
       <option value="lwss">Lightweight Spaceship</option>
     </select>
     <button id="apply-pattern-button">Apply Pattern</button>
-
+      </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     <script src="game.js"></script>
   </body>
